* update definition for Acurite00275RM thanks to Topslakr MR124
* update OSUVR128 packet identifier thanks to danimaciasperea MR130
* added support for wh24/wh25 variant thanks to sagu23 MR93
* added battery and more wind mappings for Bresser-5in1 thanks to millallo MR85
* update FOWH65B mappings thanks to vittorio88 MR92
* added PrologueTH thanks to stephen-hocking

0.81 01jul2021
* add WH31L thanks to MksRasp #133

0.80 03mar2021
* add inFactory-TH temp humidity sensor thanks to gleven #117

0.79 15jan2021
* update LaCrosse-TX141THBv2 to the new style SDR. thanks to Mario St-Gelais
* update identifier for Acurite-986
* update Oregon-PCR800 to the new style SDR. thanks to luchmhor #94
* remove ussb1 from Acurite-6045M. thanks to rct/n7qnm #81
* add support for WS2032. rain may not be correct. thanks to raadi...@gmail.com
* update identifier for Acurite-6045M to the new style SDR.
* update identifier for Fineoffset-WHx080 to the new style SDR. thanks to W11T #97
* update identifier for HIDEKI-TS04 to the new style SDR.
* update a few parse json battery_ok

0.78 06jun2020
* updated packet formats for Oregon Scientific WMR100N. -tk
* corrected wind speed for Acurite5n1PacketV2. -tk

0.77 06feb2020
* revert the rtl_433 to rtl changes
* update identifier for Ambient Weather F007TH
* added support for fine offset rain gauge (rtl_433 calls it EcoWitt-WH40)
* deal with more changes to acurite 5n1 packet format from rtl_433

0.76 04feb2020
* use rtl instead of rtl_433 to match rtl_433 project change
* stop using -G in default command, since it is now officially just for testing
* encourage use of -R instead of -G, as requested by rtl_433 project

0.75 02jan2020
* fixed unit system bug in OSWGR800 packet.  thanks to user olivier!

0.74 22dec19
* added support for TS-FT002.  thanks to user splobsterman!

0.73 14dec19
* added support for acurite atlas packets.  thanks to user Chris Morris!

0.72 02dec19
* added support for TFATwinPlus303049.  thanks to user weezul!